# AGV

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  agv_manual_config.yaml  agv_manual_controller.py
.claude/: settings.json
archive_pending_review/backend_deprecated/: app.py
backend/: README.md  app.py
backend/templates/: dashboard.html
docs/: DELIVERY_REPORT.md  api.md  architecture.md  cleanup_report.md  codex_plan.md  demo.md  insar_data_flow.md  insar_mvp_plan.md  integration_plan.md  minimal_port_scene_400m.md  offline_setup.md  quickstart.md  regression_fix_plan.md  run_guide.md  ui_relayout_plan.md
harbour_assets_description/config/: .gitkeep
log/: latest_build
ros_gz_project_template/: README.md
ros_gz_project_template/ros_gz_example_bringup/: CMakeLists.txt  package.xml
ros_gz_project_template/ros_gz_example_bringup/config/: agv_ackermann.rviz  deformation_zones.yaml
ros_gz_project_template/ros_gz_example_bringup/launch/: simplified_port_agv_terrain_400m.launch.py
ros_gz_project_template/ros_gz_example_gazebo/: CMakeLists.txt
scripts/: check.sh  common_env.sh  dev_start.sh  prepare_insar_demo.py  start_all.sh  start_all_tmux.sh  start_controller.sh  start_gazebo.sh  start_web_dashboard.sh  stop_all.sh  verify_collision_fix.sh  verify_integration.sh
web_dashboard/: agv_mission_controller.py  app.py  config.yaml  odom_tf_publisher.py  odom_visual_helper.py  risk_fusion.py  risk_layer.py  start_server.sh
web_dashboard/config/: demo_routes.yaml
web_dashboard/deformation_provider/: __init__.py  base_provider.py  (+2 more)
(+17 files in other folders)
